A       templates_1.50mm/neuromorphometrics.txt
A       templates_1.50mm/neuromorphometrics.xml
M       vbm_stat_marks.m
M       vbm_vol_atlas.m

(1)  Moved code block "deformation output" in cg_vbm_write to "write output" section.
(2)  Update command line report.
(3)  Added atlas-xml files for SPM12-ROI analysis (alpha version).
(4)  Added neuromorphometrics atlas (alpha version). 
------------------------------------------------------------------------
r643 | dahnke | 2014-10-24 17:50:32

M       CHANGES.txt
M       cg_spmF2x.m
M       cg_spmT2x.m
M       cg_vbm_tools.m
M       vbm_surf_parameters.m

(1) Added estimation of sucus depth and surface area and updated all
    relevant functions.
(2) Corrected bug in spmT2x.m and spmF2x regarding wrong filenames.

------------------------------------------------------------------------
r644 | gaser | 2014-11-05 12:09:25

M       CHANGES.txt
M       cg_vbm_tools.m
M       html/vbm12.html
M       vbm_surf_createCS.m
M       vbm_surf_parameters.m

(1) Added areal smoothing to spherical inflation to obtain more equally
    sized spheres.
(2) Removed estimation of local surface area because it worked not yet
    correctly.


------------------------------------------------------------------------
r645 | gaser | 2014-11-06 14:15:25

M       CHANGES.txt
M       html/vbm12.html
M       vbm_surf_createCS.m

(1) Added CAT_RefineMesh after reduce_patch in vbm_surf_createCS.m because
    reducing patch leads to huge triangles in some areas.
(2) Flag usePPmap is again set to "0" because CAT_DeformSurface did not worked
    properly.

------------------------------------------------------------------------
r646 | gaser | 2014-11-11 09:23:38

M       CHANGES.txt
A       fsaverage/lh.inflated.gii
A       fsaverage/rh.inflated.gii
M       html/vbm12.html

Added inflated surfaces to fsaverage for display purposes.

------------------------------------------------------------------------
r647 | gaser | 2014-11-13 08:39:05